# adrlane

./: .gitignore  2026-07-07-adrlane-design.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.plan/archive/milestones/m1-cli-and-documentation-bootstrap/: milestone.md
.plan/archive/milestones/m1-cli-and-documentation-bootstrap/issues/: issue-001-cli-init-scaffold.md  issue-005-ci-pipeline.md  issue-006-pypi-release-workflow.md
.plan/milestones/m1-cli-and-documentation-bootstrap/: milestone.md
.plan/milestones/m1-cli-and-documentation-bootstrap/issues/: issue-002-docs-llm-contract-and-templates.md  issue-003-pytest-test-foundation.md  issue-004-packaging-and-versioning.md
.plan/milestones/m1-cli-docs-bootstrap/: milestone.md
.plan/milestones/m1-cli-docs-bootstrap/issues/: issue-001-cli-init-scaffold.md  issue-002-docs-llm-contract-and-templates.md  issue-003-pytest-test-foundation.md  issue-004-packaging-and-versioning.md  issue-005-ci-pipeline.md  issue-006-pypi-release-workflow.md
.plan/milestones/m2-agent-skills-adapters/: milestone.md
.plan/milestones/m2-agent-skills-adapters/issues/: issue-001-cursor-skill-adapter.md  issue-002-claude-code-adapter-and-agent-flags.md
.plan/milestones/m2-agent-skills-and-adapters/: milestone.md
.plan/milestones/m2-agent-skills-and-adapters/issues/: issue-001-cursor-skill-adapter.md  issue-002-claude-code-adapter-and-agent-flags.md  issue-003-global-and-local-skills-cli.md
.plan/milestones/m3-polish-and-maintenance/: milestone.md
.plan/milestones/m3-polish-and-maintenance/issues/: issue-001-doctor-informational-checks.md  issue-002-upgrade-path-and-onboarding-docs.md
.plan/milestones/m3-polish-maintenance/: milestone.md
.plan/milestones/m3-polish-maintenance/issues/: issue-001-doctor-informational-checks.md  issue-002-upgrade-path-and-onboarding-docs.md
docs/: README.md
docs/adr/: 0001-python-and-pytest-as-implementation-stack.md  0002-agent-agnostic-contract-with-thin-adapters.md  0003-global-and-local-skills-install-scope.md  0004-doc-filename-and-lifecycle-conventions.md  0005-dedicated-upgrade-command-for-package-owned-content.md
docs/llm/templates/: spec.md
docs/specs/: 20260707-adrlane-design.md
src/adrlane/: __init__.py  doctor.py  upgrade.py
src/adrlane/agents/: __init__.py  registry.py  skills.py
src/adrlane/bootstrap/: __init__.py  actions.py  agents_loader.py  executor.py  plan.py  templates_loader.py
src/adrlane/bootstrap/templates/docs/llm/: AGENT_PROTOCOL.md
src/adrlane/bootstrap/templates/workspace/: workspace.yaml
src/adrlane/cli/: __init__.py  main.py  skills.py
tests/: agent_expectations.py  bootstrap_expectations.py  conftest.py  helpers.py  test_agents.py  test_bootstrap.py  test_bootstrap_actions.py  test_bootstrap_executor.py  test_bootstrap_marker.py  test_bootstrap_plan.py  test_cli_doctor.py  test_cli_init.py  test_cli_init_agents.py  test_cli_init_edge_cases.py  test_cli_init_partial.py  test_cli_skills.py  test_cli_upgrade.py  test_docs_bootstrap.py  test_package.py  test_skills.py  test_templates_loader.py
