[project]
name = "adrlane"
version = "0.1.0"
description = "Documentation-as-code bootstrap for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
adrlane = "adrlane.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adrlane"]
