[project]
name = "adrlane"
version = "0.1.0"
description = "Documentation-as-code bootstrap for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
adrlane = "adrlane.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=3.8.0",
    "ruff>=0.8.4",
]
publish = [
    "build>=1.4.0",
    "twine>=6.2.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["adrlane"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adrlane"]
