[project]
name = "adrlane"
version = "0.2.1"
description = "Documentation-as-code bootstrap for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Michał Sipa" },
]
keywords = ["documentation", "ai-agents", "cli", "docs-as-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/koradon/adrlane"
Repository = "https://github.com/koradon/adrlane"
Issues = "https://github.com/koradon/adrlane/issues"

[project.scripts]
adrlane = "adrlane.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=3.8.0",
    "ruff>=0.8.4",
]
publish = [
    "build>=1.4.0",
    "twine>=6.2.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["adrlane"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adrlane"]

[tool.hatch.build.targets.sdist]
only-include = ["src/adrlane", "LICENSE", "pyproject.toml", "README.md"]
